src/Pages/Team/Team.module.css
.testimonial_wrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 15vh;
  margin-bottom: 15vh;
  padding: 100px;
}
.bgname {
  display: flex;
  justify-content: center;
  text-shadow: 0.8px 0px 0px rgba(255, 255, 255, 0.15),
    /* Right shadow */ -0.8px 0px 0px rgba(255, 255, 255, 0.15),
    /* Left shadow */ 0px 0.8px 0px rgba(255, 255, 255, 0.15),
    /* Bottom shadow */ 0px -0.8px 0px rgba(255, 255, 255, 0.15); /* Top shadow */
  color: #080108;
  font-family: Kumbh Sans;
  font-weight: 900;
  line-height: 28px;
  letter-spacing: 0em;
  text-align: center;
  font-size: 20vmin;
  font-weight: 800;
}
.test_text {
  color: white;
}
.test_text {
  text-align: center;
  position: relative;
  bottom: 20px;
  color: white;
  font-size: 3vw;
  font-weight: bold;
  margin: 15px;
}

.mainimgdiv {
  margin: 70px;
  min-width: 300px;
  max-width: 60vw;
   aspect-ratio: 1 / 1; 
}
.team_img {
  border-radius: 30px;
  width: 100%;
  height:50%;
   object-fit: cover; 
}
/* .team_container {
  display: flex;
  flex-wrap: wrap;
  gap: 50px;
  justify-content: space-around;
  text-align: center;
  margin-top: 30px;
} */
 .team_container {
  display: flex;
  flex-wrap: wrap;
  gap: 40px;
  justify-content: center;
  margin-top: 40px;
}


@media screen and (width<=768px) {
  .test_text{
    font-size: 30px;
    margin-top: 50px;
  }
}

